--- a/src/styles/atoms/_buttons.scss
+++ b/src/styles/atoms/_buttons.scss
@@ -9,18 +9,14 @@ button {
   display: inline-block;
   text-align: center;
   text-decoration: none;
+  border: 2px solid transparent;
 
   @each $name, $theme in $colors {
     &.is-#{$name} {
       background-color: color($name, base);
       color: color($name, contrast);
-      border: 2px solid color($name, base);
+      border-color: color($name, base);
       transition: all 0.3s ease-in-out;
-
-      &:hover, &:focus {
-        background-color: color($name, contrast);
-        color: color($name, base);
-      }
     }
   }
 }
